cross-the-board port of core testing structure to revised approach and exposed jaxrscs