@@ -1,8 +1,6 @@
 package ejava.examples.jaxrscs.dmv;
 
-import java.net.MalformedURLException;
 import java.net.URI;
-import java.net.URL;
 
 import java.net.URISyntaxException;
 
@@ -11,6 +9,7 @@ import javax.inject.Inject;
 
 
 import javax.inject.Singleton;
+import javax.ws.rs.core.UriBuilder;
 
 import org.apache.http.client.HttpClient;
 import org.apache.http.impl.client.DefaultHttpClient;
@@ -24,6 +23,7 @@ import org.springframework.core.env.Environment;
 
 import ejava.examples.jaxrscs.dmv.client.ProtocolClient;
 import ejava.examples.jaxrscs.dmv.rs.ApplicationsRS;
+import ejava.examples.jaxrscs.dmv.rs.DmvRS;
 import ejava.examples.jaxrscs.dmv.rs.PhotosRS;
 import ejava.examples.jaxrscs.dmv.rs.ResidentsRS;
 import ejava.examples.jaxrscs.dmv.svc.ApplicationsService;
@@ -87,23 +87,55 @@ public class DmvConfig {
         HttpClient httpClient = new DefaultHttpClient();
         return httpClient;
     }
-    
-    @Bean
-    public URI dmvURI() {
+
+    /**
+     * Return the full URI to the base servlet context
+     * @return
+     */
+    @Bean 
+    public URI appURI() {
         try {
+            //this is the URI of the local jetty instance for unit testing
             String host=env.getProperty("host", "localhost");
-            int port=Integer.parseInt(env.getProperty("port", "9092"));
+            //default to http.server.port and allow a http.client.port override
+            int port=Integer.parseInt(env.getProperty("http.client.port",
+                env.getProperty("http.server.port")
+                ));
             String path=env.getProperty("servletContext", "/");
-            URL url=new URL("http", host, port, path + "/dmv");
-            log.debug("server URI={}", url.toURI());
-            return url.toURI();
-        } catch (MalformedURLException ex) {
-            throw new RuntimeException("error creating URL:" + ex, ex);
+            URI uri = new URI("http", null, host, port, path, null, null);
+            return uri;
         } catch (URISyntaxException ex) {
+            ex.printStackTrace();
             throw new RuntimeException("error creating URI:" + ex, ex);
         }
     }
+    
+    /**
+     * Return the full URI to the bank REST service
+     * @return
+     */
+    @Bean 
+    public URI dmvURI() {
+        URI uri = UriBuilder.fromUri(appURI())
+                .path("rest")
+                .path(DmvRS.class)
+                .build();
+        return uri;
+    }
 
+    /**
+     * Return full URI to the applications REST service
+     * @return
+     */
+    @Bean 
+    public URI dmvlicURI() {
+        URI uri = UriBuilder.fromUri(appURI())
+                .path("rest")
+                .path(ApplicationsRS.class)
+                .build(); 
+        return uri;
+    }
+    
     @Bean
     public ProtocolClient dmv() {
         return new ProtocolClient();
