@@ -1,8 +1,6 @@
 package ejava.examples.jaxrscs.jaxrs;
 
-import java.net.MalformedURLException;
 import java.net.URI;
-import java.net.URL;
 
 import java.net.URISyntaxException;
 
@@ -15,7 +13,6 @@ import javax.ws.rs.core.UriBuilder;
 
 import org.apache.http.client.HttpClient;
 import org.apache.http.impl.client.DefaultHttpClient;
-import org.apache.http.protocol.HttpContext;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.context.annotation.Bean;
@@ -43,18 +40,24 @@ public class ResourcesTestConfig {
         return new PropertySourcesPlaceholderConfigurer();
     }
     
-    @Bean
+    /**
+     * Return the full URI to the base servlet context
+     * @return
+     */
+    @Bean 
     public URI appURI() {
         try {
+            //this is the URI of the local jetty instance for unit testing
             String host=env.getProperty("host", "localhost");
-            int port=Integer.parseInt(env.getProperty("port", "9092"));
+            //default to http.server.port and allow a http.client.port override
+            int port=Integer.parseInt(env.getProperty("http.client.port",
+                env.getProperty("http.server.port")
+                ));
             String path=env.getProperty("servletContext", "/");
-            URL url=new URL("http", host, port, path);
-            log.debug("server URI={}", url.toURI());
-            return url.toURI();
-        } catch (MalformedURLException ex) {
-            throw new RuntimeException("error creating URL:" + ex, ex);
+            URI uri = new URI("http", null, host, port, path, null, null);
+            return uri;
         } catch (URISyntaxException ex) {
+            ex.printStackTrace();
             throw new RuntimeException("error creating URI:" + ex, ex);
         }
     }
@@ -62,30 +65,23 @@ public class ResourcesTestConfig {
     @Bean @Singleton
     public HttpClient httpClient() {
         log.info("creating non-cached HttpClient");
-        final long jettyDelay=env.getProperty("jetty.delay", Long.class, 100L);
-        log.info("creating non-cached HttpClient");
-        HttpClient httpClient = new DefaultHttpClient() {
-            @Override
-            public HttpContext createHttpContext() {
-                //try to avoid the Jetty deadlocks
-                try { Thread.sleep(jettyDelay); } catch (Exception ex) {}
-                return super.createHttpContext();
-            }
-        };
+        HttpClient httpClient = new DefaultHttpClient();
         return httpClient;
     }
     
     @Bean 
     public URI httpMethodsURI() {
         return UriBuilder.fromUri(appURI())
-                         .path(HttpMethodDemoRS.class)
-                         .build();
+                        .path("rest")
+                        .path(HttpMethodDemoRS.class)
+                        .build();
     }
     
     @Bean 
     public URI httpResponsesURI() {
         return UriBuilder.fromUri(appURI())
-                         .path(HttpResponseDemoRS.class)
-                         .build();
+                        .path("rest")
+                        .path(HttpResponseDemoRS.class)
+                        .build();
     }
 }
