@@ -1,10 +1,6 @@
 package ejava.examples.jaxrsscale.jaxrs;
 
-import java.net.MalformedURLException;
-
-
 import java.net.URI;
-import java.net.URL;
 
 import java.net.URISyntaxException;
 
@@ -48,18 +44,24 @@ public class ScaleTestConfig {
         return new PropertySourcesPlaceholderConfigurer();
     }
     
-    @Bean
+    /**
+     * Return the full URI to the base servlet context
+     * @return
+     */
+    @Bean 
     public URI appURI() {
         try {
+            //this is the URI of the local jetty instance for unit testing
             String host=env.getProperty("host", "localhost");
-            int port=Integer.parseInt(env.getProperty("port", "9092"));
+            //default to http.server.port and allow a http.client.port override
+            int port=Integer.parseInt(env.getProperty("http.client.port",
+                env.getProperty("http.server.port")
+                ));
             String path=env.getProperty("servletContext", "/");
-            URL url=new URL("http", host, port, path);
-            log.debug("server URI={}", url.toURI());
-            return url.toURI();
-        } catch (MalformedURLException ex) {
-            throw new RuntimeException("error creating URL:" + ex, ex);
+            URI uri = new URI("http", null, host, port, path, null, null);
+            return uri;
         } catch (URISyntaxException ex) {
+            ex.printStackTrace();
             throw new RuntimeException("error creating URI:" + ex, ex);
         }
     }
@@ -80,6 +82,7 @@ public class ScaleTestConfig {
     @Bean 
     public URI cachingURI() {
         return UriBuilder.fromUri(appURI())
+                         .path("rest")
                          .path(CachingRS.class)
                          .build();
     }
@@ -87,6 +90,7 @@ public class ScaleTestConfig {
     @Bean 
     public URI concurrencyURI() {
         return UriBuilder.fromUri(appURI())
+                         .path("rest")
                          .path(ConcurrentRS.class)
                          .build();
     }
